--- a/src/Styles/My_Classes.css
+++ b/src/Styles/My_Classes.css
@@ -58,3 +58,62 @@
 .this-shadow {
   box-shadow: var(--shadow);
 }
+
+/* ============ */
+/* ============ */
+/* ============ */
+
+/* letter spacing */
+.l-s-1 {
+  letter-spacing: var(--spacing-1);
+}
+.l-s-2 {
+  letter-spacing: var(--spacing-2);
+}
+
+/* 
+------------
+font weight
+------------
+*/
+.fw-normal {
+  font-weight: 400 !important;
+}
+.fw-bold {
+  font-weight: 700 !important;
+}
+/* 
+----------
+button
+----------
+*/
+.my-btn {
+  background: var(--this-primary);
+  color: white;
+  border: 3px solid #00000010;
+  font-weight: 500;
+  letter-spacing: 0.1em;
+  box-sizing: border-box;
+}
+.my-btn-outline {
+  background: none;
+  color: var(--this-primary);
+  border: 2px solid var(--this-primary);
+  font-weight: 500;
+  letter-spacing: 0.1em;
+  transition: all 0.2s;
+}
+.my-btn-outline:hover {
+  background: var(--this-primary);
+  color: white;
+  transition: all 0.2s;
+}
+.my-btn:active,
+.my-btn-outline:active {
+  background: #3399ffdd;
+}
+/*  */
+.this-active {
+  background: #3399ff30;
+  color: white;
+}
