facebook +github login removed

--- a/src/Components/Movies/SingleMovie/MovieData.css
+++ b/src/Components/Movies/SingleMovie/MovieData.css
@@ -9,5 +9,8 @@
 }
 .data {
   line-height: 1.5;
-  color: var(--this-primary-lt) !important;
+  color: rgb(231, 227, 255) !important;
+}
+.budget {
+  background: #ffffff10;
 }
