--- a/src/Styles/root.css
+++ b/src/Styles/root.css
@@ -6,7 +6,7 @@
   --this-dark: #071a2f;
   --this-semi-dark: #001e3c;
   --this-primary: #3399ff;
-  --this-primary-lt: #b0d8ff;
+  --this-primary-lt: #3399ff0d;
   --this-secondary: #ccccff;
   /* shadow */
   --shadow-bg: 0px 35px 50px -40px #00000040;
